# rrplug

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  flake.nix  readme.md  rust-toolchain.toml  toolchain.toml
.github/: test_rrplug.ps1
.github/workflows/: rrplug-test-build.yml
cpp_include/: concommand.h  convar.h  squirrelclasstypes.h  squirreldatatypes.h
examples/: async_engine.rs  cvar_example.rs  helloworld.rs  squirrel_example.rs
headers/: plugin_abi.h
manifest/: Resource.rc  manifest.json
r2rsplugins/: Cargo.toml  build.rs
r2rsplugins/headers/: Resource.rc  resource.h
r2rsplugins/src/: lib.rs  plugin.rs  prelude.rs
r2rsplugins/src/ffi/: error.rs  mod.rs  player_info.rs  utils.rs
r2rsplugins/src/macros/: entry.rs
rrplug_proc/: Cargo.toml
rrplug_proc/src/: impl_traits.rs  lib.rs  parsing.rs
rrplug_template/: Cargo.toml  build.rs  cargo-generate.toml
rrplug_template/manifest/: Resource.rc  manifest.json  resource.h
rrplug_template/src/: lib.rs
src/: errors.rs  lib.rs  plugin.rs  prelude.rs
src/bindings/: command.rs  convar.rs  cvar.rs  cxx_binds.rs  entity.rs  filesystem.rs  mod.rs  plugin_abi.rs  squirrelclasstypes.rs  squirreldatatypes.rs  squirrelfunctions.rs  unwraped.rs
src/bindings/cbase/: client.rs  globalvars.rs  mod.rs  player.rs
src/bindings/class_types/: c_player.rs  cbaseanimating.rs  cbaseanimatingoverlay.rs  cbasecombatcharacter.rs  cbasecombatweapon.rs  cbaseentity.rs  client.rs  cplayer.rs  cplayerdecoy.rs  cweaponx.rs  globalvars.rs  mod.rs  player.rs
src/bindings/client/: c_player.rs  mod.rs
src/bindings/cvar/: command.rs  convar.rs  mod.rs
src/bindings/server/: cai_assault_behavior.rs  cai_base_actor.rs  cai_base_npc.rs  cai_baseactorbase.rs  cai_baseflyingbot.rs  cai_behaviorbase.rs  cai_changetarget.rs  cai_combatant.rs  cai_component.rs  cai_dynamiclink.rs  cai_dynamiclinkcontroller.rs  cai_enemies.rs  cai_followbehavior.rs  cai_hint.rs  cai_local_navigator.rs  cai_motor.rs  cai_move_probe.rs  cai_moveandshootoverlay.rs  cai_movemonitor.rs  cai_navigator.rs  cai_networkmanager.rs  cai_path.rs  cai_pathfinder.rs  cai_patrol_behavior.rs  cai_radial_link_controller.rs  cai_search_behavior.rs  cai_senses.rs  cai_shot_regulator.rs  cai_skit_node.rs  cai_tacticalservicess.rs  cai_testhull.rs  cai_track_pather.rs  cbase_helicopter.rs  cbase_helicopter_behavior_host.rs  cbaseanimating.rs  cbaseanimatingoverlay.rs  cbasecombatcharacter.rs  cbasecombatweapon.rs  cbaseentity.rs  cnpc_bullseye.rs  (+22 more)
src/ffi/: error.rs  mod.rs  utils.rs
src/high/: class_types.rs  concommands.rs  convars.rs  engine.rs  engine_sync.rs  filesystem.rs  mod.rs  northstar.rs  squirrel.rs  squirrel_traits.rs  vector.rs
src/high/engine/: concommands.rs  convars.rs  mod.rs
src/interfaces/: external.rs  interface.rs  manager.rs  mod.rs
src/low/: engine.rs  mod.rs  squirrel.rs
src/macros/: entry.rs  helper.rs  manifest.rs  mod.rs  sq_function_group.rs  sq_return.rs  sq_utils.rs  utils.rs
src/mid/: concommands.rs  convars.rs  engine.rs  filesystem.rs  mod.rs  northstar.rs  reloading.rs  source_alloc.rs  squirrel.rs  utils.rs
src/mid/engine/: concommands.rs  convars.rs  mod.rs
src/mid/server/: cplayer.rs  mod.rs
src/nslog/: log.rs  mod.rs  tracing.rs
src/wrappers/: concommands.rs  convars.rs  engine.rs  errors.rs  loader.rs  mod.rs  northstar.rs  presence.rs  squirrel.rs  squrriel.rs  squrrielvm.rs  vector.rs
