[package]
name = "rrplug"
version = "4.0.0"
authors = ["catornot"]
description = "wrappers and functions for R2Northstar plugins"
repository = "https://github.com/catornot/rrplug"
license = "Apache-2.0 OR MIT"
keywords = ["plugin", "northstar", "titanfall"]
exclude  = [".gitignore"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
log = "0.4.19"
once_cell = "1.18.0"
rrplug_proc = { path = "./rrplug_proc" }
parking_lot = "0.12.1"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemServices"] }
bitflags = "2.4.1"

[package.metadata.docs.rs]
features = [ "async_engine" ]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "x86_64-pc-windows-gnu"] # hopefully docs.rs will still work

[features]
# default = ["async_engine"]
async_engine = []
