[package]
name = "rrplug"
version = "4.1.0"
authors = ["catornot"]
description = "framework for R2Northstar plugins"
repository = "https://github.com/R2NorthstarTools/rrplug"
license = "Apache-2.0 OR MIT"
keywords = ["plugin", "northstar", "framework", "titanfall2", "r2northstar"]
exclude  = [".gitignore"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.*"
log = { version = "0.4.*", optional = true }
once_cell = "1.*"
rrplug_proc = { path = "./rrplug_proc" }
parking_lot = "0.12.*"
windows = { version = "0.52.*", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemServices"] }
bitflags = "2.*"
tracing = { version = "0.1.*", optional = true }
tracing-subscriber = { version ="0.3.19", optional = true }

[package.metadata.docs.rs]
features = [ "async_engine" ]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "x86_64-pc-windows-gnu"] # hopefully docs.rs will still work

[features]
default = ["logging-tracing"]
async_engine = []
logging-log = ["log"]
logging-tracing = ["tracing", "tracing-subscriber"]

[[example]]
crate-type = ["cdylib"]
name = "squirrel_example"
path = "examples/squirrel_example.rs"

[[example]]
crate-type = ["cdylib"]
name = "cvar_example"
path = "examples/cvar_example.rs"

[[example]]
crate-type = ["cdylib"]
name = "async_engine"
path = "examples/async_engine.rs"
required-features = ["async_engine"]
