[package]
name = "rrplug_proc"
version = "3.0.0"
authors = ["catornot"]
description = "crate for proc macros of rrplug"
repository = "https://github.com/catornot/rrplug"
license = "Apache-2.0 OR MIT"
keywords = ["plugin", "northstar", "titanfall", "macro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.67"
